# gitcodes-mcp-test-1

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/api/: auth.rs  client.rs  error.rs  mod.rs  request.rs  response.rs
src/core/: error.rs  mod.rs  processor.rs  service.rs
src/models/: mod.rs  persistence.rs  resource.rs  user.rs
src/tests/: api_tests.rs
src/utils/: id.rs  logging.rs  metrics.rs  mod.rs  validation.rs
